Fix issue where player is not visible after scrolling playlist.
After selecting the "Scroll" display and scrolling down, the player gets hidden when the "Hide" playlist is then selected.

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -1560,6 +1560,10 @@ div.jp-playlist a:hover {
  * -----------------------------------------------------------------------------
  */
 
+.visible {
+	visibility: visible;
+}
+
 .m-auto {
 	margin: auto;
 }
